# aws-smart-product-onboarding

./: .eslintrc.json  .gitattributes  .gitignore  .npmignore  .npmrc  .nxignore  .projenrc.ts  .syncpackrc.json  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  THIRD-PARTY  architecture.md  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.dev.json  tsconfig.json
.github/workflows/: pr-build.yml
.kiro/specs/appconfig-runtime-configuration/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/cra-to-vite-migration/: design.md  requirements.md  tasks.md
.kiro/specs/github-ci-action/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/poetry-to-uv-migration/: design.md  requirements.md  tasks.md
.kiro/specs/projen-ejection-migration/: design.md  nx-migration-plan.md  projen-ejection-analysis.md  projen-task-analysis.md  requirements.md  tasks.md
.kiro/specs/template-system-for-product-generator/: design.md  requirements.md  tasks.md
.kiro/steering/: nx-monorepo.md  nx.md  product.md  structure.md  tech.md  testing-efficiency.md
.projen/: deps.json  tasks.json
documentation/: extract-attributes.md  generate-product-data-from-images.md  security.md
documentation/bottom-up-product-categorization/: categorization-task.md  category-tree-preparation.md  index.md  metaclass-task.md
notebooks/: .gitignore  1 - category tree prep.ipynb  2 - metaclasses generation.ipynb  README.md  configure_categorization.py  pyproject.toml
samples/: README.md
samples/B074M5HPBD/: metadata.txt
samples/B0799CK52K/: metadata.txt
samples/B07GTFSCHB/: metadata.txt
scripts/: fix_api_markdown_headings.py  fix_api_markdown_links.py  generate-pdf-doc.sh  release.sh
